Fix spacing in nav bar

--- a/css/main.css
+++ b/css/main.css
@@ -846,6 +846,7 @@ header .logo a {
 --------------------------------------------------------------------- */
 #nav-wrap, #nav-wrap ul, #nav-wrap li, #nav-wrap a {
 	margin: 0;
+	margin-bottom: -50px;
 	padding: 0;
 	border: none;
 	outline: none;
